--- a/assets/sass/_overlay.scss
+++ b/assets/sass/_overlay.scss
@@ -44,3 +44,12 @@
 	bottom: 0;
 	top: 0;
 }
+
+.rtl {
+	.overlay {
+		.close {
+			right: auto;
+			left: 0;
+		}
+	}
+}
